--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,8 +7,8 @@
   <li>
     <a href="http://localhost:3000/movies/<%= movie.id %>"><%= movie.title %></a>
     (<%= movie.year %>)
+    <a href="http://localhost:3000/movies/<%= movie.id %>/edit">Edit this movie</a> |
     <a href="http://localhost:3000/delete_movie/<%= movie.id %>">Delete this movie</a>
-    <a href="http://localhost:3000/movies/<%= movie.id %>/edit">Edit this movie</a>
   </li>
   <% end %>
 </ul>
